--- a/src/App.css
+++ b/src/App.css
@@ -218,7 +218,10 @@ a:not([href]):not([tabindex]):focus {
 }
 
 .area {
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background: #fff;
   border: 1px solid rgba(0, 0, 0, 0.05);
   box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.05);
@@ -228,9 +231,8 @@ a:not([href]):not([tabindex]):focus {
   padding: 10px 16px;
   margin-bottom: 12px;
   cursor: pointer;
+  -webkit-user-select: none;
   user-select: none;
-  grid-template-columns: auto max-content;
-  grid-column-gap: 5px;
 }
 .area .areaName {
   font-weight: 600;
@@ -240,6 +242,28 @@ a:not([href]):not([tabindex]):focus {
 }
 .area .areaTotal {
   color: #767676;
+  display: flex;
+  justify-content: space-between;
+  align-self: stretch;
+  direction: rtl;
+}
+.area .areaStats {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.area .areaConfirmed {
+  color: #de3700;
+  font-weight: 600;
+}
+.area .areaRecovered {
+  color: #60bb69;
+  font-weight: 600;
+}
+.area .areaDeaths {
+  color: #718096;
+  font-weight: 600;
 }
 .mobile .areaTotal .delta {
   font-size: 12px;
@@ -249,10 +273,10 @@ a:not([href]):not([tabindex]):focus {
   text-align: right;
   font-size: 11px;
   line-height: 15px;
-  margin-left: 8px;
+  margin-left: 2px;
   background-color: #f5f5f5;
   border-radius: 2px;
-  padding: 1px 4px 2px 4px;
+  padding: 2px;
   font-weight: 600;
 }
 .circlePopup {
