--- a/src/App.css
+++ b/src/App.css
@@ -1206,8 +1206,8 @@ a:not([href]):not([tabindex]):focus {
   position: absolute;
   background-color: rgba(255, 255, 255, 0.9);
   backdrop-filter: blur(5px);
-  min-height: 45vh;
-  margin-top: 55vh;
+  min-height: 55vh;
+  margin-top: 45vh;
 }
 .mobile .pullbar {
   height: 5px;
@@ -1282,13 +1282,23 @@ a:not([href]):not([tabindex]):focus {
   flex: 1;
 }
 
+.signature a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 5px;
+}
 .desktop .signature {
-  display: none;
+  display: flex;
+  justify-content: center;
+  margin: 0px;
+  font-size: 0.9em;
 }
 .mobile .signature {
   display: flex;
   justify-content: center;
   margin: 10px 0px;
+  font-size: 0.9em;
 }
 .mobile .getnotifiedbutton {
   color: white;
