--- a/src/App.css
+++ b/src/App.css
@@ -375,10 +375,17 @@ a:not([href]):not([tabindex]):focus {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
 }
-.text-xl {
+.desktop .text-xl {
+  font-size: 1rem;
+}
+.mobile .text-xl {
   font-size: 1.25rem;
 }
-.text-xxl {
+.desktop .text-xxl {
+  font-size: 1.6rem;
+  line-height: 2rem;
+}
+.mobile .text-xxl {
   font-size: 1.8rem;
   line-height: 2rem;
 }
